# takhleeq_backend_frontend

./: .env  .gitignore  CLAUDE.md  README.md  compose.yaml  pyproject.toml  test_google_auth.html
.github/workflows/: main_online-mart-project.yml  test-and-build.yml
ai_services/ai_chatbot/: .env  .gitignore  Dockerfile  README.md  app.py  chatbot.py  dynamic_instruction.md  pyproject.toml  vector_embedding.py
ai_services/ai_chatbot/ai_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai_services/ai_chatbot/docs/: Takhleeq_Chatbot_Knowledge_Base.docx
ai_services/ai_design_generation_visualization/: .env  .gitignore  Dockerfile  README.md  config.py  consumer.py  database.py  list_model.py  main.py  model.py  producer.py  pyproject.toml  test_debug.py
ai_services/ai_design_generation_visualization/ai_agents/: coordinator.py  design_agent.py  dynamic_instruction.md  visualization_agent.py
ai_services/ai_design_generation_visualization/ai_design_generation_visualization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env  .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  plan.md  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: MainLayout.jsx
frontend/src/components/pages/: CartPage.jsx  CategoriesPage.jsx  ContactPage.jsx  LandingPage.jsx  LoginPage.jsx  MyDesignsPage.jsx  NotificationsPage.jsx  SettingsPage.jsx  SignupPage.jsx  StudioPage.jsx
frontend/src/components/routing/: AuthGuard.jsx  AuthInit.jsx
frontend/src/components/ui/: CartIcon.jsx  CartItem.jsx  FoatingChatbot.jsx  Footer.jsx  Hero.jsx  OrderSummary.jsx  ProductCard.jsx  Sidebar.jsx  StyleSettingsSidebar.jsx  TestimonialCard.jsx
frontend/src/contexts/: CartContext.jsx
frontend/src/hooks/: useCart.js
frontend/src/services/: aiChatbotService.js  aiDesignService.js  apiClient.js  authService.js  inventoryService.js  notificationService.js  orderService.js  paymentService.js  productService.js
frontend/src/store/: authSlice.js  cartSlice.js
inventory_services/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml
inventory_services/inventory_services/: Producer_for_order.py  conusmer.py  database.py  main.py  model.py  producer.py  setting.py
inventory_services/inventory_services.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notification_services/: .env  Dockerfile  README.md  pyproject.toml
notification_services/notification_services/: database.py  email_services.py  main.py  setting.py
notification_services/notification_services.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notification_services/notification_services/Consumer/: kafka_order_consumer.py  kafka_payment_consumer.py  kafka_user_consumer.py
order_services/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml
order_services/order_services/: authenticate.py  consumer.py  database.py  main.py  producer.py  setting.py
order_services/order_services.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
payment_services/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml
payment_services/payment_services/: authentication.py  consumer.py  database.py  main.py  model.py  producer.py  setting.py
payment_services/payment_services.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
product_services/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml  requirements.txt
product_services/product_services/: authenticate.py  consumer.py  database.py  main.py  producer.py  setting.py
product_services/product_services.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
user_services/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml  test_auth_email.py
user_services/user_services/: consumer.py  database.py  main.py  model.py  role_checker.py  schema.py  setting.py  utils.py
user_services/user_services.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
