[project]
name = "ai-service-vector-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "chainlit>=2.9.6",
    "dotenv>=0.9.9",
    "openai-agents>=0.9.0",
    "pinecone>=8.0.1",
    "python-docs>=0.1.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
]

[tool.uv.workspace]
members = [
    "ai_services/ai_chatbot",
    "ai_services/ai_design_generation_visualization",
]
