[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "notification-services"
version = "0.1.0"
description = "Notification microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "aiokafka>=0.12.0",
    "starlette>=0.41.0",
]
