[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["product_services"]

[project]
name = "product-services"
version = "0.1.0"
description = "Product microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "aiokafka>=0.12.0",
    "starlette>=0.41.0",
    "pinecone>=8.0.1",
    "google-generativeai>=0.8.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.22",
]

[project.scripts]
