[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "user-services"
version = "0.1.0"
description = "User microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "aiokafka>=0.12.0",
    "starlette>=0.41.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "google-auth>=2.0.0",
    "requests>=2.31.0",
    "confluent-kafka>=2.13.2",
    "python-dotenv==1.0.1",
]
